hphp/hack/test/typecheck/xhp/xhp_children_empty3.php.exp
File "xhp_children_empty3.php", line 5, characters 13-13:
An XHP name or category name is expected here. (Parsing[1002])
