hphp/hack/test/typecheck/xhp/xhp_children_empty3.php
<?hh


class :my-html-two {
  children (empty);
}
